# VirtualCamera

./: .gitignore  CMakeLists.txt  LICENSE
windows/mf/: DllInterface.cpp  DllMain.cpp  FrameBuffer.h  Global.h  MediaSource.cpp  MediaSource.h  MediaStream.cpp  MediaStream.h  VCamContext.cpp  VCamContext.h  VirtualCamera.cpp  VirtualCamera.def  VirtualCamera.h
